src/server/core/rust-macros/tests/fail/procedure_no_input.stderr
error: procedure must have exactly one input parameter
 --> tests/fail/procedure_no_input.rs:6:1
  |
6 | async fn bad() -> Result<String, seam_server::SeamError> {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
